test script for demoqa application

--- a/HoangNguyenDuc/Reports/Spark.html
+++ b/HoangNguyenDuc/Reports/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 10, 2022 10:28:42 AM</span></a>
+<a href="#"><span class="badge badge-primary">Aug 16, 2022 12:21:47 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@successfully_register_student</a><a class="dropdown-item" href="#">@search_book_with_multiple_result</a><a class="dropdown-item" href="#">@successfully_add_book_to_collection</a><a class="dropdown-item" href="#">@successfully_delete_book_on_profile_page</a>
+<a class="dropdown-item" href="#">@successfully_register_student</a><a class="dropdown-item" href="#">@successfully_add_book_to_collection</a><a class="dropdown-item" href="#">@search_book_with_multiple_result</a><a class="dropdown-item" href="#">@successfully_delete_book_on_profile_page</a>
 </ul>
 </li>
 </ul>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Add book to collection</p>
             <p class="text-sm">
-              <span>10:28:43 AM</span> / <span>00:00:27:910</span>
+              <span>12:21:48 PM</span> / <span>00:00:20:862</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add book to collection</h5>
-<span class='badge badge-success'>08.10.2022 10:28:43 AM</span>
-<span class='badge badge-danger'>08.10.2022 10:29:11 AM</span>
-<span class='badge badge-default'>00:00:27:910</span>
+<span class='badge badge-success'>08.16.2022 12:21:48 PM</span>
+<span class='badge badge-danger'>08.16.2022 12:22:09 PM</span>
+<span class='badge badge-default'>00:00:20:862</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -120,8 +120,8 @@
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="com.demoqa.steps.LoginStep.userWantToAddBookLoggedInToTheApplication()">
-                <span>Given User want to add book logged in to the application</span>
+              <div class="step pass-bg" title="com.demoqa.steps.LoginStep.userLoggedInToTheApplication(java.lang.String)">
+                <span>Given User "add" logged in to the application</span>
       <div>
       </div>
               </div>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">Delete book from profile</p>
             <p class="text-sm">
-              <span>10:29:11 AM</span> / <span>00:00:14:841</span>
+              <span>12:22:09 PM</span> / <span>00:00:21:179</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Delete book from profile</h5>
-<span class='badge badge-success'>08.10.2022 10:29:11 AM</span>
-<span class='badge badge-danger'>08.10.2022 10:29:26 AM</span>
-<span class='badge badge-default'>00:00:14:841</span>
+<span class='badge badge-success'>08.16.2022 12:22:09 PM</span>
+<span class='badge badge-danger'>08.16.2022 12:22:30 PM</span>
+<span class='badge badge-default'>00:00:21:179</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=11</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -191,8 +191,8 @@
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="com.demoqa.steps.LoginStep.userWantToDeleteBookLoggedInToTheApplication()">
-                <span>Given User want to delete book logged in to the application</span>
+              <div class="step pass-bg" title="com.demoqa.steps.LoginStep.userLoggedInToTheApplication(java.lang.String)">
+                <span>Given User "delete" logged in to the application</span>
       <div>
       </div>
               </div>
@@ -244,7 +244,7 @@
           <div class="test-detail">
             <p class="name">Register student form</p>
             <p class="text-sm">
-              <span>10:29:26 AM</span> / <span>00:00:22:997</span>
+              <span>12:22:30 PM</span> / <span>00:00:32:892</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -253,9 +253,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Register student form</h5>
-<span class='badge badge-success'>08.10.2022 10:29:26 AM</span>
-<span class='badge badge-danger'>08.10.2022 10:29:49 AM</span>
-<span class='badge badge-default'>00:00:22:997</span>
+<span class='badge badge-success'>08.16.2022 12:22:30 PM</span>
+<span class='badge badge-danger'>08.16.2022 12:23:03 PM</span>
+<span class='badge badge-default'>00:00:32:892</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=23</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -355,7 +355,7 @@
           <div class="test-detail">
             <p class="name">Search book on book store page</p>
             <p class="text-sm">
-              <span>10:29:49 AM</span> / <span>00:00:18:610</span>
+              <span>12:23:03 PM</span> / <span>00:00:21:474</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -364,9 +364,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Search book on book store page</h5>
-<span class='badge badge-success'>08.10.2022 10:29:49 AM</span>
-<span class='badge badge-danger'>08.10.2022 10:30:08 AM</span>
-<span class='badge badge-default'>00:00:18:610</span>
+<span class='badge badge-success'>08.16.2022 12:23:03 PM</span>
+<span class='badge badge-danger'>08.16.2022 12:23:25 PM</span>
+<span class='badge badge-default'>00:00:21:474</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=41</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -395,9 +395,7 @@
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>When User inputs book name</span>
-      <div><table class='markup-table table '><tr><td>bookName</td></tr><tr><td>Design</td></tr></table>
-      </div>
+                    <span>When The user input book name "design"</span>
       <div>
       </div>
                   </div>
@@ -421,9 +419,7 @@
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>When User inputs book name</span>
-      <div><table class='markup-table table '><tr><td>bookName</td></tr><tr><td>design</td></tr></table>
-      </div>
+                    <span>When The user input book name "Design"</span>
       <div>
       </div>
                   </div>
@@ -480,7 +476,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:26 AM</td>
+<td>12:22:30 PM</td>
 <td>
 <a href="#" class="linked" test-id='23' id='24'>Register student successfully</a>
 <div class="">
@@ -490,7 +486,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:26 AM</td>
+<td>12:22:30 PM</td>
 <td>
 <a href="#" class="linked" test-id='23' id='25'>Register student successfully</a>
 <div class="">
@@ -500,67 +496,11 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:39 AM</td>
+<td>12:22:47 PM</td>
 <td>
 <a href="#" class="linked" test-id='23' id='33'>Register student successfully</a>
 <div class="">
 <span class="badge badge-default">Register student form.Register student successfully</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>3</span>
-</span>
-<p class="name">@search_book_with_multiple_result</p>
-<p class="duration text-sm">3 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@search_book_with_multiple_result</h4>
-<span status="pass" class='badge log pass-bg'>3 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:49 AM</td>
-<td>
-<a href="#" class="linked" test-id='41' id='42'>Search book on profile page successfully</a>
-<div class="">
-<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:49 AM</td>
-<td>
-<a href="#" class="linked" test-id='41' id='43'>Search book on profile page successfully</a>
-<div class="">
-<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:59 AM</td>
-<td>
-<a href="#" class="linked" test-id='41' id='49'>Search book on profile page successfully</a>
-<div class="">
-<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
 </div>
 </td>
 </tr>
@@ -592,11 +532,67 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:28:43 AM</td>
+<td>12:21:48 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Add book to collection successfully</a>
 <div class="">
 <span class="badge badge-default">Add book to collection.Add book to collection successfully</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>3</span>
+</span>
+<p class="name">@search_book_with_multiple_result</p>
+<p class="duration text-sm">3 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@search_book_with_multiple_result</h4>
+<span status="pass" class='badge log pass-bg'>3 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>12:23:03 PM</td>
+<td>
+<a href="#" class="linked" test-id='41' id='42'>Search book on profile page successfully</a>
+<div class="">
+<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>12:23:03 PM</td>
+<td>
+<a href="#" class="linked" test-id='41' id='43'>Search book on profile page successfully</a>
+<div class="">
+<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>12:23:15 PM</td>
+<td>
+<a href="#" class="linked" test-id='41' id='49'>Search book on profile page successfully</a>
+<div class="">
+<span class="badge badge-default">Search book on book store page.Search book on profile page successfully</span>
 </div>
 </td>
 </tr>
@@ -628,7 +624,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:29:11 AM</td>
+<td>12:22:09 PM</td>
 <td>
 <a href="#" class="linked" test-id='11' id='12'>Delete book on profile page successfully</a>
 <div class="">
@@ -653,13 +649,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 10, 2022 10:28:42 AM</h3>
+<h3>Aug 16, 2022 12:21:47 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 10, 2022 10:30:08 AM</h3>
+<h3>Aug 16, 2022 12:23:25 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -749,7 +745,7 @@
 </div></div>
 <script>
 var timeline = {
-"Add book to collection":27.91,"Delete book from profile":14.841,"Register student form":22.997,"Search book on book store page":18.61
+"Add book to collection":20.862,"Delete book from profile":21.179,"Register student form":32.892,"Search book on book store page":21.474
 };
 </script>
 <div class="row">
@@ -767,16 +763,16 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>@search_book_with_multiple_result</td>
-<td>3</td>
+<td>@successfully_add_book_to_collection</td>
+<td>1</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
 </tr>
 <tr>
-<td>@successfully_add_book_to_collection</td>
-<td>1</td>
+<td>@search_book_with_multiple_result</td>
+<td>3</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
